[metadata]
name = aws_help
version = attr: aws_help.__version__
description = Adds -h or --help to aws cli
long_description = file: README.rst
long_description_content_type = text/x-rst
url = https://github.com/xames3/aws_help/
author = Akshay Mestry (XAMES3)
author_email = xa@mes3.dev
license = MIT
license_file = LICENSE
platforms = osx, win32, linux
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: Console
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: MacOS
    Operating System :: Microsoft
    Operating System :: POSIX
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: Implementation :: CPython
    Topic :: Terminals
    Topic :: Utilities
keywords = aws, help, python
project_urls =
    Changelog = https://github.com/xames3/aws_help
    Source = https://github.com/xames3/aws_help
    Tracker = https://github.com/xames3/aws_help/issues

[options]
py_modules = aws_help
python_requires = >= 3.6
zip_safe = no

[options.entry_points]
console_scripts =
    aws_help = aws_help:main

[mypy]
mypy_path = aws_help
check_untyped_defs = true
disallow_any_generics = true
ignore_missing_imports = true
no_implicit_optional = true
show_error_codes = true
strict_equality = true
warn_redundant_casts = true
warn_return_any = true
warn_unreachable = true
warn_unused_configs = true
no_implicit_reexport = true
